# trash-cli

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  Taskfile.yml  gatekeeper.toml  pyproject.toml  setup.cfg  trash-empty  trash-list  trash-put  trash-restore  trash-rm
.archive/: INDEX.md
.github/hooks/: pre-commit  security-guard.sh
.github/scripts/: security-guard.sh
.github/workflows/: codeql.yml  make-release.yml  policy-gate.yml  run-tests.yml  secret-scanning.yml  security-guard-hook-audit.yml  security-guard.yml  security-scan-schedule.yml  stage-gates.yml
PROJECT-wtrees/: coderabbit-rate-limit  coderabbit-rate-limit-2  mergein-coderabbit-policy  pr-queue-unblock-20260227  pr1-rust-put-fix
config/: phenotype.toml
contracts/: README.md
docs/: README.md  index.md  package.json
docs/.vitepress/: config.mts
docs/context/governance/: STACKED_PRS_AND_RELEASE_CHANNELS.md
docs/context/governance/bookset/: BOT_PR_FORM_TEMPLATE.md  README.md  RELEASE_MATRIX_TEMPLATE.md
docs/guide/: index.md
docs/reference/: CODE_ENTITY_MAP.md  FR_TRACKER.md
docs/sessions/20260328-root-docsites-worklog-consolidation/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md  07_AUDIT_SNAPSHOT.md
docs/tests/: playwright.config.ts
docs/tests/e2e/: docsite.spec.ts
rust-trash-rm/: Cargo.toml
rust-trash-rm/src/: main.rs
schemas/: README.md
src/: errors.rs  fs.rs  helpers.rs  lib.rs  models.rs
trash-empty-rs/: Cargo.toml
trash-empty-rs/src/: main.rs
trash-list-rs/: Cargo.toml
trash-list-rs/src/: main.rs
trash-put-rs/: Cargo.toml
trash-put-rs/src/: main.rs
trash-restore-rs/: Cargo.toml
trash-restore-rs/src/: main.rs
trashcli/: phenotype_init.py
